test work + jdk 17 compat